force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Session Number</label>
        <type>AutoNumber</type>
        <displayFormat>SES-{0000}</displayFormat>
    </nameField>
</CustomObject>