force-app/main/default/objects/Session__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration Minutes</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>